# ohrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
completions/: ohrs.bash
crates/oh-api/: Cargo.toml
crates/oh-api/src/: client.rs  codex.rs  lib.rs  openai.rs  provider.rs  sse.rs  streaming.rs
crates/oh-auth/: Cargo.toml
crates/oh-auth/src/: device_code.rs  error.rs  lib.rs  manager.rs  providers.rs  storage.rs
crates/oh-autopilot/: Cargo.toml
crates/oh-autopilot/src/: error.rs  journal.rs  lib.rs  registry.rs  types.rs
crates/oh-channels/: Cargo.toml
crates/oh-channels/src/: adapter.rs  bus.rs  lib.rs  types.rs
crates/oh-channels/src/slack/: client.rs  events.rs  mod.rs
crates/oh-config/: Cargo.toml
crates/oh-config/src/: lib.rs  paths.rs  settings.rs
crates/oh-engine/: Cargo.toml
crates/oh-engine/src/: cost_tracker.rs  lib.rs  query.rs  query_engine.rs
crates/oh-harness/: Cargo.toml
crates/oh-harness/src/: cli.rs  main.rs  run_once.rs  subagent_runner.rs  trajectory.rs
crates/oh-harness/src/commands/: host.rs  mod.rs
crates/oh-harness/src/host/: mod.rs
crates/oh-harness/src/ui/: app.rs  input.rs  keybindings.rs  mod.rs  render.rs  themes.rs  transcript.rs
crates/oh-hooks/: Cargo.toml
crates/oh-hooks/src/: executor.rs  lib.rs  loader.rs  matching.rs
crates/oh-mcp/: Cargo.toml
crates/oh-mcp/src/: client.rs  lib.rs
crates/oh-mcp/src/transport/: http.rs  mod.rs  stdio.rs  ws.rs
crates/oh-mcp/tests/: integration_stdio.rs
crates/oh-mcp/tests/fixtures/: echo_server.py
crates/oh-permissions/: Cargo.toml
crates/oh-permissions/src/: lib.rs
crates/oh-plugin-abi/: Cargo.toml
crates/oh-plugin-abi/src/: ffi.rs  lib.rs  traits.rs
crates/oh-plugin-derive/: Cargo.toml
crates/oh-plugin-derive/src/: lib.rs
crates/oh-plugins/: Cargo.toml
crates/oh-plugins/src/: discovery.rs  dylib_loader.rs  installer.rs  json_loader.rs  lib.rs
crates/oh-sandbox/: Cargo.toml
crates/oh-sandbox/src/: docker.rs  error.rs  landlock.rs  lib.rs  path_validator.rs  spec.rs
crates/oh-services/: Cargo.toml
crates/oh-services/src/: lib.rs  token_estimation.rs
crates/oh-services/src/bridge/: mod.rs
crates/oh-services/src/compact/: mod.rs
crates/oh-services/src/coordinator/: agent_definitions.rs  mod.rs
crates/oh-services/src/cron/: mod.rs
crates/oh-services/src/memory/: mod.rs
crates/oh-services/src/prompts/: base.rs  claudemd.rs  context.rs  environment.rs  mod.rs
crates/oh-services/src/sessions/: mod.rs
crates/oh-services/src/skills/: mod.rs
crates/oh-services/src/subagent/: backend_registry.rs  manager.rs  mod.rs  trajectory.rs
crates/oh-services/src/tasks/: manager.rs  mod.rs
crates/oh-swarm/: Cargo.toml
crates/oh-swarm/src/: backend.rs  error.rs  in_process.rs  lib.rs  mailbox.rs  subprocess.rs  team.rs  types.rs  worktree.rs
crates/oh-swarm/tests/: in_process_tests.rs  mailbox_tests.rs  team_tests.rs
crates/oh-telemetry/: Cargo.toml
crates/oh-telemetry/src/: init.rs  lib.rs  metrics.rs
crates/oh-tools/: Cargo.toml
crates/oh-tools/src/: agent.rs  ask_user_question.rs  bash.rs  brief.rs  config_tool.rs  cron_create.rs  cron_delete.rs  cron_list.rs  enter_plan_mode.rs  enter_worktree.rs  exit_plan_mode.rs  exit_worktree.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  hook_manage.rs  lib.rs  list_mcp_resources.rs  lsp.rs  mcp_auth.rs  mcp_tool.rs  notebook_edit.rs  pathsafe.rs  read_mcp_resource.rs  registry.rs  remote_trigger.rs  send_message.rs  skill.rs  sleep.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  team_create.rs  team_delete.rs  teammate_message.rs  (+5 more)
crates/oh-types/: Cargo.toml
crates/oh-types/src/: api.rs  bridge.rs  coordinator.rs  hooks.rs  lib.rs  mcp.rs  messages.rs  permissions.rs  plugin.rs  skills.rs  state.rs  stream_events.rs  subagent.rs  tasks.rs  tools.rs  ui.rs
docs/superpowers/specs/: 2026-05-25-subagent-orchestration-design.md
