[package]
name = "oh-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anthropic API client with streaming and retry logic for OpenHarness"

[dependencies]
oh-types.workspace = true
oh-telemetry.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
opentelemetry.workspace = true
pin-project-lite.workspace = true
