[package]
name = "oh-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Credential storage and OAuth flows for ohrs providers"

[features]
default = ["keyring-backend"]
# Enable the OS keyring backend (keyring crate).
keyring-backend = ["dep:keyring"]
# Enable keyring tests — hits the real OS keyring; disabled in CI.
keyring-tests = ["keyring-backend"]

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
dirs.workspace = true
tracing.workspace = true
reqwest = { workspace = true }

# Secrets
secrecy.workspace = true

# OAuth2 device-code flow
oauth2.workspace = true

# OS keyring (optional)
keyring = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
