[package]
name = "oh-autopilot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core autopilot loop: task intake, registry, journal, and run_one scheduler"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
