[package]
name = "oh-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration, settings, and path resolution for OpenHarness"

[dependencies]
oh-types.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
