[package]
name = "oh-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP client with stdio/http/ws transports for OpenHarness"

[dependencies]
oh-types.workspace = true
oh-telemetry.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
opentelemetry.workspace = true
futures.workspace = true
