[package]
name = "oh-permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permission checking for tool execution in OpenHarness"

[dependencies]
oh-types.workspace = true
oh-config.workspace = true
oh-telemetry.workspace = true
tracing.workspace = true
globset.workspace = true
opentelemetry.workspace = true
