[package]
name = "oh-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin loading: dylib (.so/.dll) and JSON/markdown (static) plugins"

[dependencies]
oh-types.workspace = true
oh-plugin-abi.workspace = true
oh-config.workspace = true
oh-telemetry.workspace = true
oh-hooks.workspace = true
oh-mcp.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
