[package]
name = "oh-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandbox backends (Landlock + Docker) for OpenHarness tool execution"

[features]
default = []
# Enable live Docker integration tests (requires a running Docker daemon)
docker-tests = []

[dependencies]
async-trait.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
uuid = { workspace = true }
futures.workspace = true

# Docker backend
bollard.workspace = true

# Landlock — Linux only
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
