[package]
name = "oh-services"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supporting services: tasks, memory, sessions, skills, prompts, bridge, coordinator, cron"

[dependencies]
oh-types.workspace = true
oh-telemetry.workspace = true
oh-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
regex.workspace = true
dirs.workspace = true
tempfile.workspace = true
async-trait.workspace = true
getrandom = "0.2"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
