[package]
name = "oh-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-process swarm backend, file mailbox, and team lifecycle manager for OpenHarness"

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = "6"
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
