[package]
name = "oh-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool trait and 43+ tool implementations for OpenHarness"

[dependencies]
oh-types.workspace = true
oh-telemetry.workspace = true
oh-mcp.workspace = true
oh-services.workspace = true
oh-config.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
globset.workspace = true
uuid.workspace = true
thiserror.workspace = true
reqwest.workspace = true
glob = "0.3"
regex.workspace = true

[dev-dependencies]
tempfile = "3"
glob = "0.3"
