[package]
name = "oh-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool trait and 43+ tool implementations for OpenHarness"

[dependencies]
oh-types.workspace = true
oh-telemetry.workspace = true
oh-mcp.workspace = true
oh-services.workspace = true
oh-swarm.workspace = true
oh-config.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
globset.workspace = true
uuid.workspace = true
thiserror.workspace = true
reqwest.workspace = true
glob = "0.3"
regex.workspace = true
# TOOL-8: stream HTTP bodies with a hard byte cap instead of buffering text().
futures-util = "0.3"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
# TOOL-2: confine the bash child's filesystem access via the Landlock LSM.
landlock = "0.4"
# TOOL-10: kill the bash child's whole process GROUP on timeout (killpg).
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
glob = "0.3"
